[gd_scene load_steps=5 format=3 uid="uid://d2177c0ghual7"]

[ext_resource type="Script" path="res://scene/map_hud/map_hud.gd" id="1_10bk5"]
[ext_resource type="PackedScene" uid="uid://cdjwem2g3dtbj" path="res://scene/text_panel/text_panel.tscn" id="2_4xe7l"]
[ext_resource type="PackedScene" uid="uid://bt3ooka2esnfu" path="res://scene/scene_transition/scene_transition.tscn" id="3_pemcj"]
[ext_resource type="PackedScene" uid="uid://fnt32c4huobn" path="res://scene/ui_player/ui_player.tscn" id="4_xbsi6"]

[node name="MapHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_10bk5")

[node name="SceneTransition" parent="." instance=ExtResource("3_pemcj")]
layout_mode = 1

[node name="MG" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Control" type="Control" parent="MG"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="PoiInfo" parent="MG/Control" instance=ExtResource("2_4xe7l")]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 0.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Control2" type="Control" parent="MG"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="DateTime" parent="MG/Control2" instance=ExtResource("2_4xe7l")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="HorseStatusContainer" type="Control" parent="MG"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="HorseStatus" parent="MG/HorseStatusContainer" instance=ExtResource("2_4xe7l")]
custom_minimum_size = Vector2(0, 35)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="UiPlayer" parent="." instance=ExtResource("4_xbsi6")]
